--- a/docker_files/proxy/app.conf
+++ b/docker_files/proxy/app.conf
@@ -78,3 +78,61 @@ server {
     }
 }
 
+server {
+    listen 443 ssl;
+    server_name itpie.demo;
+    server_tokens off;
+
+    resolver 127.0.0.11;
+
+    client_max_body_size 50M;
+	
+    ssl_certificate /etc/letsencrypt/localhost.pem;
+    ssl_certificate_key /etc/letsencrypt/localhost-key.pem;
+
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    location / {
+		proxy_pass https://host.docker.internal:6443/;
+        proxy_set_header Host $host;
+        
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Real-IP $remote_addr;
+
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $http_connection;
+    }
+}
+
+
+server {
+    listen 443 ssl;
+    server_name itpie.test;
+    server_tokens off;
+
+    resolver 127.0.0.11;
+
+    client_max_body_size 50M;
+	
+    ssl_certificate /etc/letsencrypt/localhost.pem;
+    ssl_certificate_key /etc/letsencrypt/localhost-key.pem;
+
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    location / {
+		proxy_pass https://host.docker.internal:7443/;
+        proxy_set_header Host $host;
+        
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Real-IP $remote_addr;
+
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $http_connection;
+    }
+}
