--- a/docker_files/proxy/app.conf
+++ b/docker_files/proxy/app.conf
@@ -3,6 +3,8 @@ server {
     server_name portainer.dev;
     server_tokens off;
 
+    resolver 127.0.0.11;
+    
     ssl_certificate /etc/letsencrypt/localhost.pem;
     ssl_certificate_key /etc/letsencrypt/localhost-key.pem;
 
@@ -27,6 +29,8 @@ server {
     listen 443 ssl;
     server_name roadmap.dev;
     server_tokens off;
+
+    resolver 127.0.0.11;
 
     ssl_certificate /etc/letsencrypt/localhost.pem;
     ssl_certificate_key /etc/letsencrypt/localhost-key.pem;
@@ -65,7 +69,7 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-		proxy_pass https://host.docker.internal:5443/;
+		proxy_pass https://host.docker.internal:6443/;
         proxy_set_header Host $host;
         
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -94,7 +98,7 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-		proxy_pass https://host.docker.internal:6443/;
+		proxy_pass https://host.docker.internal:7443/;
         proxy_set_header Host $host;
         
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -124,7 +128,7 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-		proxy_pass https://host.docker.internal:7443/;
+		proxy_pass https://host.docker.internal:5443/;
         proxy_set_header Host $host;
         
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
