--- a/docker_files/docker-compose.yml
+++ b/docker_files/docker-compose.yml
@@ -1,19 +1,7 @@
 version: "3"
 
 services:
-  portainer:
-    image: portainer/portainer-ce:alpine
-    restart: unless-stopped
-    command: -H unix:///var/run/docker.sock
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - portainer_data:/data
-  jiraroadmap:
-    image: registry.gitlab.com/vaeit/jiraroadmap:latest
-    restart: unless-stopped
-    volumes:
-      - ./roadmapconf:/app/conf
-  nginx:
+  proxy:
     image: nginx:1.15-alpine
     restart: unless-stopped
     volumes:
@@ -22,14 +10,15 @@ services:
     ports:
       - "80:80"
       - "443:443"
-  watcher:
-    image: containrrr/watchtower
+  pgadmin:
+    image: dpage/pgadmin4
     restart: unless-stopped
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
     environment:
-      WATCHTOWER_CLEANUP: "true"
-      WATCHTOWER_INCLUDE_RESTARTING: "true"
-      WATCHTOWER_INCLUDE_STOPPED: "true"
+      PGADMIN_DEFAULT_EMAIL: jason@walljm.com
+      PGADMIN_DEFAULT_PASSWORD: password
+      PGADMIN_CONFIG_SERVER_MODE: 'False'
+    volumes:
+       - pgadmin:/var/lib/pgadmin
 volumes:
   portainer_data:
+  pgadmin:
