--- a/ssh/config
+++ b/ssh/config
@@ -4,8 +4,8 @@ Host *
 Host gitlab.com
     HostName gitlab.com
     User git
-    IdentityFile ~/.ssh/id_rsa
+    IdentityFile ~/.ssh/id_ed25519
 Host gitlab.com-personal
     HostName gitlab.com
     User git
-    IdentityFile ~/.ssh/id_ed25519
+    IdentityFile ~/.ssh/id_ed25519_personal
